crates/pixi_core/src/workspace/snapshots/pixi_core__workspace__virtual_packages__tests__get_minimal_virtual_packages@osx-arm64.snap
---
source: src/workspace/virtual_packages.rs
expression: packages
---
[
    GenericVirtualPackage {
        name: PackageName {
            normalized: None,
            source: "__unix",
        },
        version: Version {
            version: [[0], [0]],
            local: [],
        },
        build_string: "0",
    },
    GenericVirtualPackage {
        name: PackageName {
            normalized: None,
            source: "__osx",
        },
        version: Version {
            version: [[0], [14], [0]],
            local: [],
        },
        build_string: "0",
    },
    GenericVirtualPackage {
        name: PackageName {
            normalized: None,
            source: "__archspec",
        },
        version: Version {
            version: [[0], [1]],
            local: [],
        },
        build_string: "m1",
    },
]
